--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,10 @@
 /* App-specific styles */
 :host {
   display: block;
-  margin: 0;
-  padding: 0;
   text-align: left;
   max-width: none;
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-top: env(safe-area-inset-top);
 }
