--- a/src/app/features/merch/merch-section.html
+++ b/src/app/features/merch/merch-section.html
@@ -8,9 +8,9 @@
             <img class="img-fluid" [src]="item.image" [alt]="item.title">
             <a class="mask" [href]="item.purchaseUrl">
               <span class="mask-inner">
-                <span class="item-title">{{ item.title }} CHF {{ item.price }}</span>
+                <span class="item-title">{{ item.title }}</span>
                 <span class="desc">{{ item.description }}</span>
-                <span class="btn btn-primary btn-cta">Jetzt kaufen</span>
+                <span class="btn btn-primary btn-cta">Jetzt anfragen</span>
               </span>
             </a>
           </div>
