--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -7,6 +7,7 @@
           <div class="date-label">
             <div class="number">{{ gig.date.day }}</div>
             <div class="month">{{ gig.date.month }}</div>
+            <div class="year">{{ gig.date.year }}</div>
           </div>
           
           <div class="gig-info">
