--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@
   --text-light: rgba(255, 255, 255, 0.6);
   --text-muted: #4f545e;
   --border-light: #eee;
+  --border-dark: #4f545e;
   --section-bg-light: #f5f5f5;
 }
 
