--- a/src/app/features/about/about-section.css
+++ b/src/app/features/about/about-section.css
@@ -107,6 +107,11 @@
 }
 
 @media (max-width: 767.98px) {
+
+  .member-card {
+      border-bottom: 1px solid var(--border-dark);
+
+  }
   .about-section .item-inner {
     padding: 15px;
   }
