--- a/src/app/features/history/history-section.html
+++ b/src/app/features/history/history-section.html
@@ -17,7 +17,7 @@
             <div class="event-info">
               <h4 class="event-title">{{event.title}}</h4>
               <div class="event-subtitle">Uraufführung: <span class="event-date">{{event.date}}</span></div>
-              <div class="event-description">{{event.description}}</div>
+              <div class="event-description">{{event.description | slice:0:100}}@if (event.description && event.description.length > 100) {…}</div>
               @if (event.description) {
                 <div class="event-actions">
                   <button type="button" class="btn btn-xs btn-ghost-secondary" 
