--- a/src/app/features/contact/contact-section.html
+++ b/src/app/features/contact/contact-section.html
@@ -20,33 +20,29 @@
             @for (press of pressReleases; track press.id; let i = $index) {
               <div class="carousel-item" [class.active]="i === 0">
                 <div class="press-item">
-                  <div class="row align-items-center">
-                    <div class="col-md-6">
-                      <div class="press-image">
-                        <img [src]="getPressImageUrl(press)" [alt]="press.desc" class="img-fluid">
-                      </div>
+                  <div class="press-grid">
+                    <div class="press-image">
+                      <img [src]="getPressImageUrl(press)" [alt]="press.desc" class="img-fluid">
                     </div>
-                    <div class="col-md-6">
-                      <div class="press-content">
-                        <h4 class="press-title">{{ press.desc }}</h4>
-                        <div class="press-meta">
-                          <p class="press-source">{{ press.source }}</p>
-                          <p class="press-date">{{ formatDate(press.date) }}</p>
-                          <p class="press-author">Von {{ press.author }}</p>
-                        </div>
-                        @if (press.quote) {
-                          <blockquote class="press-quote">
-                            "{{ press.quote }}"
-                          </blockquote>
-                        }
-                        <a [href]="getPressArticleUrl(press)" target="_blank" class="btn btn-primary btn-cta btn-sm">
-                          @if (press.link) {
-                            Artikel lesen
-                          } @else {
-                            Artikel öffnen ({{ press.fileExtension.toUpperCase() }})
-                          }
-                        </a>
+                    <div class="press-content">
+                      <h4 class="press-title">{{ press.desc }}</h4>
+                      <div class="press-meta">
+                        <p class="press-source">{{ press.source }}</p>
+                        <p class="press-date">{{ formatDate(press.date) }}</p>
+                        <p class="press-author">Von {{ press.author }}</p>
                       </div>
+                      @if (press.quote) {
+                        <blockquote class="press-quote">
+                          "{{ press.quote }}"
+                        </blockquote>
+                      }
+                      <a [href]="getPressArticleUrl(press)" target="_blank" class="btn btn-primary btn-cta btn-sm">
+                        @if (press.link) {
+                          Artikel lesen
+                        } @else {
+                          Artikel öffnen ({{ press.fileExtension.toUpperCase() }})
+                        }
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -92,21 +88,21 @@
       </div>
     }
     <div class="contact-block mr-auto ml-auto">
-      <div class="row">
-        @for (contact of contactInfo; track contact.type) {
-          <div class="item col-12 col-lg-4">
-            <div class="item-inner">
-              <div class="icon-holder">
-                <i [class]="contact.icon"></i>
-              </div>
-              <h4 class="title">{{ contact.title }}</h4>
-              <div class="email">
-                <a [href]="'mailto:' + contact.email">{{ contact.email }}</a>
+        <div class="contact-grid">
+          @for (contact of contactInfo; track contact.type) {
+            <div class="item">
+              <div class="item-inner">
+                <div class="icon-holder">
+                  <i [class]="contact.icon"></i>
+                </div>
+                <h4 class="title">{{ contact.title }}</h4>
+                <div class="email">
+                  <a [href]="'mailto:' + contact.email">{{ contact.email }}</a>
+                </div>
               </div>
             </div>
-          </div>
-        }
-      </div>
+          }
+        </div>
     </div>
     
     <div class="channels-block">
