--- a/src/app/features/music/music-section.css
+++ b/src/app/features/music/music-section.css
@@ -21,6 +21,7 @@
   margin-bottom: 45px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .music-section .albums-block .item-inner .cover-holder {
@@ -107,18 +108,28 @@
 @media (max-width: 767.98px) {
   .music-section .albums-block .item-inner {
     padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
   }
   
   .music-section .albums-block .album-title {
-    max-width: 100px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-width: 235px;
+    white-space: normal;
+    text-align: center;
+    margin: 0 auto 15px auto;
   }
   
   .music-section .albums-block .cover-figure {
-    max-width: 100%;
+    max-width: 235px;
     max-height: inherit;
+    margin: 0 auto;
+  }
+  
+  .music-section .albums-block .cover-holder {
+    align-items: center;
+    width: 100%;
   }
   
   .music-section .albums-block .cover-figure .record-holder {
